--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: "3.8"
 
+volumes:
+  db-data: {}
+
 services:
   web:
     build: .
@@ -9,7 +12,13 @@ services:
       - .:/app/
     depends_on:
       - db
+    env_file: .env
 
   db:
-    image: postgres:16.0-bookworm
+    build: compose/postgres/
+    environment:
+      POSTGRES_URL: "$POSTGRES_URL"
+    volumes:
+      - db-data:/var/lib/postgresql
+    env_file: .env
 
