--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,14 @@ services:
   db:
     build: compose/postgres/
     environment:
-      POSTGRES_URL: "$POSTGRES_URL"
+      POSTGRES_USER: "$POSTGRES_USER"
+      POSTGRES_PASSWORD: "$POSTGRES_PASSWORD"
+      POSTGRES_DB: "$POSTGRES_DB"
+      POSTGRES_HOST: "${POSTGRES_HOST:-db}"
+      POSTGRES_PORT: "${POSTGRES_PORT:-5432}"
     volumes:
       - db-data:/var/lib/postgresql
     env_file: .env
+    ports:
+      - "5433:5432"
 
